# agent-framework

./: .context-network.md  .gitignore  .test_out.txt  AGENTS.md  CLAUDE.md  COMMUNITY.md  CONTRIBUTING.md  FIDES_DEVELOPER_GUIDE.md  FIDES_IMPLEMENTATION_SUMMARY.md  ISSUE-FIX-REPORT.md  ISSUE-QUALITY-REVIEW.md  ISSUE-REPRO-RESULTS.md  PR_DESCRIPTION.md  QUICK_START_FIDES.md  README.md  REPRODUCTION_REPORT.md  SUPPORT.md  TRANSPARENCY_FAQ.md  TRANSPARENCY_FAQs.md  WARP.md  dotnet-environment-variables-analysis.md  generate-language-specific-docs.ps1  global.json  pr-description.md  simple_agent_example.py  subflow_design.md  test_addition.py
python/: .cspell.json  .env.example  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODING_STANDARD.md  DEV_SETUP.md  Financial-Advisor-Redteam-Results.json  PACKAGE_STATUS.md  README.md  autogen_migration.md  check_md_code_blocks.py  coverage.json  devsetup.sh  mypy.ini  pyproject.toml  pyrightconfig.samples.json  pyrightconfig.samples.py310.json  pytest.ini  pytest.xml  python-coverage.xml  requirements.txt  responses_background_test.py  run_tasks_in_changed_packages.py  setup.py  shared_tasks.toml  test_cognee_integration.py  test_graph.py
python/.checkpoints/caresp_05bbaeeb885c4ab500ACHoMMgZHPjIKoOAteCW1ukyxRGcw8Yo/: cea942e4-98e3-43c4-9963-c7e5f5eda3cc.json  d322b9d7-2fae-4e3c-bf94-8f39f9bdaf90.json
python/.checkpoints/caresp_05bbaeeb885c4ab500uw86yTp0J7zAAq7zczFpQHtogJ4O0dJb/: d9419c4d-84fa-40bd-a50a-8885272319ac.json
python/.checkpoints/caresp_0853a4b45a741e9b00O2Ev0CTglZgKE490gyQ41HhLGQguZsY7/: d66bb5b3-604e-439b-9d42-b13505397240.json
python/.checkpoints/caresp_260c0bbb30763bf500To5wDgXPWUKWfof6rw5SfOoeEiLDmhdI/: 5a642b40-3b6f-4a15-918c-f8a4994dd158.json
python/.checkpoints/caresp_371503b345990fe2003ni20fokYxATicElgHVDKRqo7NbvHewz/: 563c1851-4170-4999-9729-951e235a1dc6.json  b93d2a6f-9142-4c26-8315-e225e9b56248.json
python/.checkpoints/caresp_371503b345990fe200wPxBKycXNBB5sv23K1Pgi5cYnKsyeYuo/: fb31f97b-b3db-4207-9594-405aeabb2f20.json
python/.checkpoints/caresp_37653587e12fc3b500Faj7f4nPwEGaNTq2kmvotmGAIu6CeecN/: 29084752-ca22-4ce1-9a3e-f6c6d6eaf162.json  e37abb98-2944-46ed-b43a-2c9330651448.json
python/.checkpoints/caresp_37653587e12fc3b500b20JrfYcDDgRaC8g8UYw28UGn8jeMlBn/: e27562bc-bcbb-428b-87a1-0b2014c104b2.json
python/.checkpoints/caresp_3c4ff94f8314b21a00TsXVES3g5gKfYBHkkVIvfdmzHHZMr6Rt/: 4dc5220a-f736-4e94-92fc-bf3e0977c910.json
python/.checkpoints/caresp_50cd309017ae4d0f00jqiJtuAOYEL24nAUip4R2tSoxuObIFkl/: a0e3343a-57b7-4c0e-bed6-9633b8dc9cd0.json
python/.checkpoints/caresp_5467f0e2b2d2432b003zYfCHX9D3x0aQOPX1h0hV3oWehrTURr/: 28d6729b-e097-4cbf-8f1f-6b9b5eebfcf7.json
python/.checkpoints/caresp_8a8d874b769d678500hsbDkH42vDc6WBiQngjQZ1PJI81IIRrh/: b7ad378a-aac7-4f37-a483-69ca68ce9de9.json
python/.checkpoints/caresp_934e6136e0cefafd00NNfGgFgXKqJ37lxbRPQitofDFnbSC98F/: a63d8166-d9f6-4ee3-8bd6-3c97b315e540.json
python/.checkpoints/caresp_934e6136e0cefafd00U7b2SBMgbV1YMmm8XX1iJAcdSAyPz31G/: 4936c6c0-3f52-4584-a050-d7eaa98423a4.json  e1ab2327-23e0-442b-8db1-8e85b599209f.json
python/.checkpoints/caresp_a0937fbe81e3a97900PVAswKJXZdcFBGccdsHQFlb4942lC0lU/: 9d32085b-afa4-4543-a135-4ba53625cd7d.json
python/.checkpoints/caresp_a0b79877ce3595ee00LV36P5yjGfhhWEu5MXbge0l66XfSeqHv/: 7ea60219-b9be-4ab2-844d-3f623fc2f419.json
python/.checkpoints/caresp_a0b79877ce3595ee00LyDFpUYcquhIX8qCzHHMSBymPfY61we7/: 7c2e8ab6-0e8b-42a0-8b28-2e38ea4d998e.json  c3bb0819-377d-4ed9-9920-6da1f01a0ad8.json
python/.checkpoints/caresp_a2175b6a4e8170cd00Mm04nm2HlkNTxslMlsm6ZfiI5USJP0Il/: 23b29bba-8de2-446b-ab8a-546ad3901936.json
python/.checkpoints/caresp_a84ccdd71bbf480300t1G1lEKVTW3azGOEorZQGamRZTn72nGW/: 1b31ff92-3fef-4547-83cf-bfb03105d6a4.json  c77d88cd-a919-4967-a1e2-95fcf12f31cc.json
python/.checkpoints/caresp_a84ccdd71bbf480300zf28dbQzRxNmPIrwmTn1PNrvAjOgmcUH/: 318f6fb8-a0e1-4201-bd95-bde96f93469f.json
python/.checkpoints/caresp_bdbebefdf0a05c5d006AA7IfCq30IQCNYNHCiQ0MlCftCNXeq6/: 81bc4053-f285-4ece-8604-e7bb56a96fe4.json
python/.checkpoints/caresp_bfbe5690bcb5af6c00ITH3Y8ka5sH9wjzSp3SXNFzZAz6cqsyJ/: f9daf429-7a1d-44e8-b94f-1a3e70b44da9.json
python/.checkpoints/caresp_ca50e1b2c9ff05d1000PSontW63f8PXEndam2gBFROmw5938iK/: 17d51626-f276-4bcc-8994-9fde313584fb.json
python/.checkpoints/caresp_ca50e1b2c9ff05d100bbRLtgKnH4j915D9jIgWO9IYYq3x8IdT/: 8ccc9bbd-e6ae-4383-b39e-964e1785af0f.json  df30ba87-24b7-499d-a586-137597cc33ae.json
python/.checkpoints/caresp_cb7365c2cef6b04500uSCowRcBfxa8phXzmfLVZHOdhJ7s1fXC/: d81078aa-2b22-4b20-9902-236583647b03.json
python/.checkpoints/caresp_dfafdcd4ffba831300URfFCzeXLRiJXTyRz6t04UM6vRXp6x2P/: 86966611-910c-4c96-aa9f-cb6202e4368f.json
python/.github/instructions/: python.instructions.md
python/.user/: otel_config.yaml
python/agent_framework/: __init__.py  __init__.pyi  _agents.py  _ai_service_client_base.py  _cancellation_token.py  _clients.py  _guard_rails.py  _logging.py  _prompt_execution_settings.py  _pydantic.py  _tools.py  _types.py  agent_pydantic.py  agents.py  exceptions.py
python/agent_framework/contents/: author_role.py  const.py  (+11 more)
python/docs/: README.md  generate_docs.py
python/evals/: .gitignore  README.md  gaia.py  gaia_viewer.py
python/runtime/: README.md  debug_test.py  pyproject.toml  requirements.txt
python/samples/: AGENTS.md  README.md  SAMPLE_GUIDELINES.md  evals_demo.py  poc_typed_options.py
python/scripts/: _dependency_bounds_lower_impl.py  _dependency_bounds_runtime.py  _dependency_bounds_upper_impl.py  check_md_code_blocks.py  dependency-bounds-test-results.json  dependency-lower-bound-results.json  local_mcp_streamable_http_server.py  run_tasks_in_changed_packages.py  run_tasks_in_packages_if_exists.py  task_runner.py  validate_dependency_bounds.py  validate_dependency_lower_bounds.py  validate_dependency_ranges.py  workspace_poe_tasks.py
python/test/: test_graph_algebra.py  test_graph_combinators.py  test_graph_low.py  test_graph_mid.py  test_utils.py
python/tests/: sample_utils.py
python/user-documentation/: autogen_migration.md
(+7749 files in other folders)
