[project]
name = "semantic-kernel-migration-samples"
version = "0.0.1"
description = "Reference orchestrations that demonstrate migrating from Semantic Kernel Python SDK to Agent Framework."
requires-python = ">=3.10"
dependencies = [
    "semantic-kernel>=1.36.0,<2.0.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.uv]
package = false
prerelease = "if-necessary-or-explicit"

[tool.uv.sources]
agent-framework = { path = "../../packages/main" }
agent-framework-azure = { path = "../../packages/azure" }
agent-framework-copilotstudio = { path = "../../packages/copilotstudio" }
agent-framework-devui = { path = "../../packages/devui" }
agent-framework-foundry = { path = "../../packages/foundry" }
agent-framework-mem0 = { path = "../../packages/mem0" }
agent-framework-redis = { path = "../../packages/redis" }
agent-framework-runtime = { path = "../../packages/runtime" }
