[project]
name = "telegram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agent-framework-core>=1.0.1",
    "agent-framework-openai>=1.0.1",
    "agent-framework-foundry>=1.0.1",
    "aiohttp>=3.13.5",
    "azure-ai-agents>=1.1.0",
    "azure-monitor-opentelemetry>=1.8.7",
    "orjson>=3.11.8",
    "python-telegram-bot[ext]>=22.7",
    "tiktoken>=0.12.0",
]

[tool.uv.sources]
agent-framework-core = { path = "../../../packages/core", editable = true }
agent-framework-openai = { path = "../../../packages/openai", editable = true }
agent-framework-foundry = { path = "../../../packages/foundry", editable = true }
