[project]
name = "agent-framework-hosting-sample-hosted-agent"
version = "0.0.1"
description = "Hosted-Agent-compatible hosting sample (Responses + Invocations)."
requires-python = ">=3.10"
dependencies = [
    "agent-framework-foundry",
    "agent-framework-foundry-hosting",
    "agent-framework-hosting",
    "agent-framework-hosting-invocations",
    "agent-framework-hosting-responses",
    "azure-identity",
    "aiohttp>=3.13.5",
    "hypercorn>=0.17",
    "azure-monitor-opentelemetry>=1.6",
]

[dependency-groups]
dev = ["openai>=1.99"]

[tool.uv]
package = false

[tool.uv.sources]
agent-framework-foundry-hosting = { path = "./_vendor/foundry_hosting", editable = true }
agent-framework-hosting = { path = "./_vendor/hosting", editable = true }
agent-framework-hosting-invocations = { path = "./_vendor/hosting-invocations", editable = true }
agent-framework-hosting-responses = { path = "./_vendor/hosting-responses", editable = true }
